--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -13,23 +13,6 @@
  * [#Source_Code Source Code]
  * [#Screenshots Screenshots]
     </td>
-    <td width="30%">
-<table border="1">
-<tr>
-<td>
-[http://download.oracle.com/javase/6/docs/technotes/guides/javaws/developersguide/contents.html http://pride-toolsuite.googlecode.com/svn/wiki/images/java-webstart-logo.png]
-<p align="center">*PRIDE Inspector WebStart*</p>
-
-    * Visualize MS data in PRIDE XML and mzML format
-    * View all public experiments in PRIDE
-    * Assess data quality using plots and charts
-    * Download and view locally ALL private experiments in PRIDE
-<p align="center">
-[http://www.ebi.ac.uk/pride/webstart/pride-inspector.jnlp http://pride-toolsuite.googlecode.com/svn/wiki/images/pride-inspector-launch-button.png]</p>
-</td>
-</tr>
-</table>
-    </td>
   </tr>
 </table>
 
@@ -37,7 +20,7 @@
 ==About PRIDE Inspector==
 The key features include:
   * Fast loading of *mzML* and *PRIDE XML* files.
-  * Direct access to all PRIDE public database experiments.
+  * Search, access and download all PRIDE public database experiments.
   * Different views on spectra, chromatogram, protein, peptides and metadata.
   * Visualization for all spectra and chromatograms, including automatic MS2 fragment ion annotations.
   * Possibility to perform a quality assessment of the data using a statistical view with different charts.
