--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -15,6 +15,7 @@
 *_September 30. 2011:_ [http://code.google.com/p/pride-toolsuite/downloads/list PRIDE Inspector Release Version 1.2.0] is now available:*
  * This version is a major update.
  * New search and download feature for experiments in the PRIDE public database.
+ * New quantification view to visualize quantification related data.
  * New protein details download option for getting protein name, protein sequence.
  * New component to visualize protein sequence and its peptide/PTM coverage.
  * New decoy filter on both protein and peptide identifications. 
