--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -7,6 +7,7 @@
  * [#About_PRIDE_Inspector About PRIDE Inspector]
  * [#Getting_PRIDE_Inspector Getting PRIDE Inspector]
   * [#Installation_Requirements Installation Requirements]
+  * [#Launch_via_Webstart Launch via Webstart]
   * [#Download Download]
  * [#FAQs FAQs]
  * [#Getting_Help Getting Help]
@@ -43,10 +44,16 @@ The data formats supported by PRIDE Inspector are:
 
 ==Getting PRIDE Inspector==
 
-===Installation Requirements==
+===Installation Requirements===
   * *Java*: Java JRE 1.6(or above), which you can download for free [http://java.sun.com/javase/downloads/index.jsp here]. (Note: most computers should have Java installed already).
   * *Operating System*: The current verion has been tested on Windows 7, Windows Vista, Linux and Max OS X, it should also work on other platforms. If you come across any problems on your platform, please contact the PRIDE Help Desk.
   * *Memory*: MS dataset can be very large sometimes, in order to get good performence from PRIDE Inspector, we recommend you to have 1G of free memory.  
+
+[PRIDEInspector top of page]
+
+----
+===Launch via Webstart===
+  You can launch the latest "PRIE Inspector" by clicking <a href="http://www.ebi.ac.uk/pride/webstart/pride-inspector.jnlp">here</>
 
 [PRIDEInspector top of page]
 
