Edited wiki page PRIDEInspector through web user interface.

--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -53,7 +53,7 @@ The data formats supported by PRIDE Inspector are:
 
 ----
 ===Launch via Webstart===
-  You can launch the latest "PRIE Inspector" by clicking <a href="http://www.ebi.ac.uk/pride/webstart/pride-inspector.jnlp">here</a>
+  You can launch directly the latest "PRIE Inspector" by clicking <a href="http://www.ebi.ac.uk/pride/webstart/pride-inspector.jnlp">here</a>
 
 [PRIDEInspector top of page]
 
