--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -53,7 +53,7 @@ The data formats supported by PRIDE Inspector are:
 
 ----
 ===Launch via Webstart===
-  You can launch directly the latest "PRIDE Inspector" by clicking <a href="http://www.ebi.ac.uk/pride/webstart/pride-inspector.jnlp">here</a>
+  Click <a href="http://www.ebi.ac.uk/pride/webstart/pride-inspector.jnlp">here</a> to launch directly the latest *PRIDE Inspector*. 
 
 [PRIDEInspector top of page]
 
