--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -40,9 +40,10 @@ The data formats supported by PRIDE Inspector are:
 *Note*: We do have plans to support additional formats like mzIdentML in the near future.
 
 
+
 ==PRIDE Inspector Publication==
 
- * *[http://www.nature.com/nbt/journal/v30/n2/full/nbt.2112.html Wang et al., Nat Biotechnol. 2012. 30: 130-132]*
+ * *[http://www.nature.com/nbt/journal/v30/n2/full/nbt.2112.html Wang et al., Nat Biotechnol. 2012. 30: 130-132.] [http://www.nature.com/nbt/journal/v30/n2/pdf/nbt.2112.pdf Full PDF (Open Access)] [http://www.ncbi.nlm.nih.gov/pubmed/22318026 PubMed record]*
 
 
 
