--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -15,6 +15,7 @@
  * [#Getting_Help Getting Help]
  * [#Source_Code Source Code]
  * [#Screenshots Screenshots]
+ * [Journal review using PRIDE Inspector?]
     </td>
   </tr>
 </table>
